--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,3 +91,23 @@
   padding-top: 30px;
 
 }
+.jumbotron {
+  height: 700px;
+  background-image:  url(../landingImage.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+}
+.opacityDiv{
+ height: 500px;
+ width: 650px;
+background-color: rgba(0,0,0, .65);
+}
+#landingH1{
+  text-align: center;
+  color: antiquewhite;
+}
+p{
+  text-align: center;
+  color: antiquewhite;
+}
