--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,7 @@
 .egg-img-div{
   display: flex;
   justify-content: center;
+  margin-top: 50px;
 }
 #landing-h1{
   text-align: center;
@@ -113,6 +114,7 @@
 }
 #egg-img{
   text-align: center;
+  padding-top: 200px;
 }
 p{
   text-align: center;
