--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,9 +86,10 @@
   border-top-right-radius: 0;
 }
 .signup-container{
-  padding-left: 20%;
-  padding-right: 20%;
+  padding-left: 10%;
+  padding-right: 0%;
   padding-top: 30px;
+  margin-right: 10px;
 
 }
 .jumbotron {
@@ -108,6 +109,10 @@
   justify-content: center;
   margin-top: 50px;
 }
+.table-parent{
+  display: flex;
+  justify-content: center;
+}
 #landing-h1{
   text-align: center;
   color: antiquewhite;
@@ -115,6 +120,25 @@
 #egg-img{
   text-align: center;
   padding-top: 200px;
+}
+
+/*#scroll{
+  paddin:;
+}*/
+/*tbody, thead{
+  display: block;
+}
+
+tbody{
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}*/
+.scroll{
+  overflow: auto;
+  height: 500px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 p{
   text-align: center;
