--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-
-
 .form-signin {
   max-width: 330px;
   padding: 15px;
@@ -89,6 +87,10 @@
   padding-top: 30px;
   margin-right: 10px;
   margin-top: 100px;
+}
+.upload-container{
+  width: 70%;
+  padding-top: 120px;
 }
 .jumbotron {
   height: 700px;
