index page 'about' section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@
   margin-top: 100px;
 }
 .jumbotron {
-  height: 700px;
+  height: 550px;
   background-image:  url(../images/landingImage.jpg);
   background-size: cover;
   display: flex;
@@ -100,7 +100,7 @@
 .opacity-div{
  height: 460px;
  width: 650px;
- background-color: rgba(0,0,0, 1);
+ background-color: rgba(0,0,0, .9);
  border-radius: 6%;
 }
 .egg-img-div{
@@ -127,7 +127,14 @@
   text-align: center;
   padding-top: 200px;
 }
-p{
+p {
   text-align: center;
   color: white;
+}
+.black-text, .black-text > p, h2{
+  color: black;
+  text-align: center;
+}
+.info {
+  margin: 0 auto;
 }
