add steve's code back into style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,3 +164,13 @@ p {
 .info-row {
   margin-bottom: 30px;
 }
+#eggbasket{
+  margin-bottom: -11px;
+  margin-top: -20px;
+}
+p{
+  text-align: center;
+  color: white;
+}
+h1{
+  color: antiquewhite;
