--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,19 +92,59 @@
   width: 70%;
   padding-top: 120px;
 }
+/* parallax example */
+/*.bg {
+  background: url('/assets/example/bg_blueplane.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 350px; same height as jumbotron
+  top:0;
+  left:0;
+  z-index: -1;
+}
 .jumbotron {
+  height: 350px;
+  color: white;
+  text-shadow: #444 0 1px 1px;
+  background:transparent;
+}*/
+
+
+/* parallax test */
+.bg {
+  background:  url(../images/landingImage.jpg) no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 450px; /*same height as jumbotron*/
+  top:0;
+  left:0;
+  z-index: -1;
+}
+.jumbotron {
+  height: 450px;
+  color: white;
+  text-shadow: #444 0 1px 1px;
+  background: transparent;
+}
+
+
+
+/* parallax (original)*/
+/*.jumbotron {
   height: 550px;
   background-image:  url(../images/landingImage.jpg);
   background-size: cover;
   display: flex;
   justify-content: center;
 }
-.opacity-div{
+}*/
+
+/*.opacity-div{
  height: 460px;
  width: 650px;
  background-color: rgba(0,0,0, .9);
  border-radius: 6%;
-}
+}*/
 .egg-img-div{
   display: flex;
   justify-content: center;
