improved styling on hover for github icons and contributors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,10 +153,13 @@ p {
 }
 .attribution-pic {
   height: 100px;
+  border-radius: 50%;
 }
-.attribution-pic img:hover{
-  opacity: 0.5;
-}
+/*.attribution-pic img:hover{
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  box-shadow:         3px 3px 5px 6px #ccc;
+}*/
 .attribution-text {
   text-align: center;
 }
@@ -167,9 +170,28 @@ p {
 .contributors img{
   margin:10px;
 }
-.contributors img:hover{
-  opacity: 0.5;
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
 }
+.hvr-grow-shadow:hover {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+/*.contributors img:hover{
+  /*opacity: 0.5;*/
+  /*-moz-box-shadow:    1px 1px 4px 5px rgba(0, 0, 0, 1);
+  -webkit-box-shadow: 1px 1px 4px 5px #ccc;
+  box-shadow:         1px 1px 4px 5px #ccc;
+}*/
 .info-row {
   margin-bottom: 30px;
 }
