--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,16 +112,16 @@
 
 /* parallax test */
 .bg {
-  background:  url(../images/landingImage.jpg) no-repeat center center;
+  background:  url(../images/landingImage-parallax-blur-dark.jpg) no-repeat center center;
   position: fixed;
   width: 100%;
-  height: 450px; /*same height as jumbotron*/
+  height: 550px; /*same height as jumbotron*/
   top:0;
   left:0;
   z-index: -1;
 }
 .jumbotron {
-  height: 450px;
+  height: 550px;
   color: white;
   text-shadow: #444 0 1px 1px;
   background: transparent;
