styling on landing with images and young eggbert

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,10 @@ p {
   height: 100px;
   border-radius: 50%;
 }
+.attribution-pic-egg {
+  height: 100px;
+  border-radius: 45%;
+}
 /*.attribution-pic img:hover{
   -moz-box-shadow:    3px 3px 5px 6px #ccc;
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;
@@ -237,10 +241,13 @@ p {
   box-shadow:         1px 1px 4px 5px #ccc;
 }*/
 .info-row {
-  margin-bottom: 30px;
+  margin-bottom: 5px;
 }
 .upload-nav{
   margin-right: -440px;
+}
+.egg-load{
+  width: 370px;
 }
 #egg-upload{
   margin-top: -7px;
