--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,9 @@
   padding-top: 0px;
 }
 .navbar{
-
+  -webkit-box-shadow: 0 10px 6px -6px #999;
+      -moz-box-shadow: 0 10px 6px -6px #999;
+      box-shadow: 0 10px 6px -6px #999;
 }
 .white-header-text{
   color: white;
@@ -247,8 +249,13 @@ p {
 .egg-nog{
   width: 600px;
 }
-.upload-nav{
-  margin-right: -440px;
+.nav-links {
+  display:inline;
+  text-align: right;
+  margin-top: 5px;
+}
+.nav-links h1{
+  font-size: 20px;
 }
 .egg-load{
   width: 370px;
@@ -259,8 +266,16 @@ p {
 }
 #egg-upload{
   margin-top: -7px;
+}
+.nav-links li {
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: top;
+}
+#egg-logo{
+  margin: -10px 0 0 10px;
   height: 50px;
-  float: right;
+  /*float: right;*/
 }
 #egg-signin{
   margin-top: 9px;
