--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,3 +305,18 @@ p{
 h1{
   color: white;
 }
+
+
+
+#welcome-modal {
+ vertical-align: middle;
+}
+
+.modal-content {
+  background-color: black;
+}
+#welcome-modal img {
+  margin-left :auto;
+  margin-right: auto;
+  display:block;
+}
