--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,7 +86,7 @@
 .signup-container{
   padding-top: 30px;
   margin-right: 10px;
-  margin-top: 100px;
+  /*margin-top: 100px;*/
 }
 
 
@@ -136,6 +136,27 @@
   -webkit-box-shadow: 0 10px 6px -6px #999;
       -moz-box-shadow: 0 10px 6px -6px #999;
       box-shadow: 0 10px 6px -6px #999;
+
+      background-color: black;
+      border-color: black;
+}
+#nav-collapse  {
+  float:right;
+
+}
+#nav-collapse a {
+  padding-top:25px;
+  vertical-align: middle;
+}
+@media(max-width: 767px) {
+  .top-logo {
+    text-align: center;
+  }
+}
+@media(max-width: 400px) {
+  #egg-logo {
+    display: none;
+  }
 }
 .white-header-text{
   color: white;
@@ -210,14 +231,14 @@ p {
 .egg-nog{
   width: 600px;
 }
-.nav-links {
+/*.nav-links {
   display:inline;
   text-align: right;
   margin-top: 5px;
 }
 .nav-links h1{
   font-size: 20px;
-}
+}*/
 .egg-load{
   width: 370px;
   box-shadow: 0 10px 10px -9px rgba(0, 0, 0, 1);
@@ -232,11 +253,11 @@ p {
 #egg-upload{
   margin-top: -7px;
 }
-.nav-links li {
+/*.nav-links li {
     display: inline-block;
     margin: 0 10px;
     vertical-align: top;
-}
+}*/
 #egg-logo{
   margin: -10px 0 0 10px;
   height: 50px;
